--- a/LEXC01.vbproj
+++ b/LEXC01.vbproj
@@ -48,7 +48,7 @@
     <DefineDebug>false</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <Optimize>true</Optimize>
-    <OutputPath>C:\TMIS_DLL\</OutputPath>
+    <OutputPath>..\..\Server_data_dll\</OutputPath>
     <DocumentationFile>LEXC01.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022,42353,42354,42355</NoWarn>
   </PropertyGroup>
